Remove Set.of()